CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Corredora__c/Producto_de_Corredora__c.object-meta.xml
<CustomObject>
    <label>Producto de Corredora</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de Corredora</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>