CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Corredora__c/fields/Codigo_de_producto_corredora__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_producto_corredora__c</fullName>
    <externalId>true</externalId>
    <label>Código de producto corredora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>