CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Corredora__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Tipo_Nectia__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Acciones</fullName>
            </value>
            <value>
                <fullName>Fondos Mutuos</fullName>
            </value>
            <value>
                <fullName>Depósitos a Plazo</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>Fondos de Inversión</fullName>
            </value>
            <value>
                <fullName>Renta Fija</fullName>
            </value>
            <value>
                <fullName>Simultáneas</fullName>
            </value>
            <value>
                <fullName>Sitio News</fullName>
            </value>
            <value>
                <fullName>Profundidad de Mercado</fullName>
            </value>
            <value>
                <fullName>Alarmas</fullName>
            </value>
            <value>
                <fullName>Analisis Técnico</fullName>
            </value>
            <value>
                <fullName>Información de Mercado</fullName>
            </value>
            <value>
                <fullName>Servicio Emaling</fullName>
            </value>
            <value>
                <fullName>Pactos</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>