CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Corredora__c/fields/Tipo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nectia__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuenta Inversiones</fullName>
            </value>
            <value>
                <fullName>Cuenta Previsional Régimen A</fullName>
            </value>
            <value>
                <fullName>Cuenta Previsional Régimen B</fullName>
            </value>
            <value>
                <fullName>Cuenta Previsional Depositos Convenidos</fullName>
            </value>
            <value>
                <fullName>Cuenta Demo CCB</fullName>
            </value>
            <value>
                <fullName>Planificación Auto</fullName>
            </value>
            <value>
                <fullName>Planificación Vivienda</fullName>
            </value>
            <value>
                <fullName>Planificación Vacaciones</fullName>
            </value>
            <value>
                <fullName>Planificación Educación</fullName>
            </value>
            <value>
                <fullName>Otra Planificación</fullName>
            </value>
            <value>
                <fullName>Cuenta Internacional</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>APV Flexibles</fullName>
                <isActive>false</isActive>
                <label>APV Flexibles</label>
            </value>
            <value>
                <fullName>Acciones</fullName>
                <isActive>false</isActive>
                <label>Acciones</label>
            </value>
            <value>
                <fullName>Depósitos a Plazo</fullName>
                <isActive>false</isActive>
                <label>Depósitos a Plazo</label>
            </value>
            <value>
                <fullName>Fondos Mutuos</fullName>
                <isActive>false</isActive>
                <label>Fondos Mutuos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>