CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Corredora__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_de_producto_corredora__c</columns>
    <columns>Tipo_Nectia__c</columns>
    <columns>Estado_Nectia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>